--- a/CNN for image recognition.ipynb
+++ b/CNN for image recognition.ipynb
@@ -19,6 +19,14 @@
    "metadata": {},
    "source": [
     "#   \n",
+    "Link for dataset: https://www.kaggle.com/c/dogs-vs-cats/data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#   \n",
     "#   \n",
     "### 1. Import packages\n",
     "\n"
